JumpScript/tests/baselines/reference/moduleExports1.errors.txt
tests/cases/compiler/moduleExports1.jump(13,6): error TS2304: Cannot find name 'module'.
tests/cases/compiler/moduleExports1.jump(13,22): error TS2304: Cannot find name 'module'.


==== tests/cases/compiler/moduleExports1.jump (2 errors) ====
    export module JumpScript.Strasse.Street {
    	export class Rue {
    		public address:string;
    	}	
    }
    
    var rue = new JumpScript.Strasse.Street.Rue();
    
    rue.address = "1 Main Street";
    
    void 0;
    
    if (!module.exports) module.exports = "";
         ~~~~~~
!!! error TS2304: Cannot find name 'module'.
                         ~~~~~~
!!! error TS2304: Cannot find name 'module'.